项目功能的完善，日志，断言测试库的添加，数据库连接池功能-周宗权提交

--- a/yougou/.settings/org.eclipse.wst.common.component
+++ b/yougou/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="yougou">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resource"/>
         <property name="context-root" value="yougou"/>
         <property name="java-output-path" value="/yougou/build/classes"/>
     </wb-module>
