--- a/yougou/WebContent/css/login.css
+++ b/yougou/WebContent/css/login.css
@@ -48,7 +48,7 @@
 	width: 100%;
 	height: 20px;
 }
-.footer{
+.footer{l
 	width: 100%;
 	height: 20px;
 }
@@ -225,7 +225,7 @@
 	font-size: 12px;
 	text-align: center;
 	line-height: 28px;
-	color: red;
+	color: #333333;
 }
 .password-msg{
 	width: 330px;
@@ -234,5 +234,5 @@
 	font-size: 12px;
 	text-align: center;
 	line-height: 28px;
-	color: red;
+	color: #333333;
 }
