--- a/yougou/WebContent/css/login.css
+++ b/yougou/WebContent/css/login.css
@@ -48,7 +48,7 @@
 	width: 100%;
 	height: 20px;
 }
-.footer{l
+.footer{
 	width: 100%;
 	height: 20px;
 }
@@ -108,7 +108,7 @@
 	margin: 0 15px;
 	padding: 30px 0 0 10px;
 }
-.srzh{
+.srzh-username,.srzh-password{
 	width: 313px;
 	height: 38px;
 	border: 1px solid #000000;
@@ -116,35 +116,51 @@
 .box{
 	width: 48px;
 	height: 36px;
-	background: url(/yougou/img/people_03.png) no-repeat center;
+	background: url(../img/people_03.png) no-repeat center;
 	float: left;
 }
-.printk{
+.box2{
+	width: 48px;
+	height: 36px;
+	background: url(../img/suo_03.png) no-repeat center;
+	float: left;
+}
+.username-srzh{
 	width: 235px;
 	height: 36px;
 	float: right;
 	border: none;
-	outline: none;
 }
-.form-contain-blank{
+.password-srzh{
+	width: 235px;
+	height: 36px;
+	float: right;
+	border: none;
+}
+.printk,.printp{
+	width: 200px;
+	height: 36px;
+	float: left;
+	border: none;
+}
+.printk-ts,.printp-ts{
+	width: 18px;
+	height: 18px;
+	float: right;
+	margin-top: 9px;
+	margin-right: 9px;
+	display: none;
+}
+.form-contain-usernameblank{
+	width: 330px;
+	height: 28px;
+}
+.form-contain-passwordblank{
 	width: 330px;
 	height: 28px;
 }
 .username-msg,.password-msg{
 	display: none;
-}
-.printp{
-	width: 235px;
-	height: 36px;
-	float: right;
-	border: none;
-	outline: none;
-}
-.box2{
-	width: 48px;
-	height: 36px;
-	background: url(/yougou/img/suo_03.png) no-repeat center;
-	float: left;
 }
 .form-contain-p{
 	width: 321px;
@@ -200,26 +216,35 @@
 	padding: 9px 18px;
 }
 .wechet{
-	background: url(/yougou/img/wechet_03.png) no-repeat;
+	background: url(../img/wechet_03.png) no-repeat;
 }
 .zhifubao{
-	background: url(/yougou/img/zhifubao_03.png) no-repeat;
+	background: url(../img/zhifubao_03.png) no-repeat;
 }
 .qq{
-	background: url(/yougou/img/qq_03.png) no-repeat;
+	background: url(../img/qq_03.png) no-repeat;
 }
 .weibo{
-	background: url(/yougou/img/weibo2_03.png) no-repeat;
+	background: url(../img/weibo2_03.png) no-repeat;
 }
 .renren{
-	background: url(/yougou/img/renren_03.png) no-repeat;
+	background: url(../img/renren_03.png) no-repeat;
 }
 .footer>p{
 	background: white;
 }
 
 .username-msg{
-	width: 330px;
+	width: 300px;
+	height: 28px;
+	display: none;
+	font-size: 12px;
+	line-height: 28px;
+	color: #333333;
+	float: left;
+}
+.password-msg{
+	width: 300px;
 	height: 28px;
 	display: none;
 	font-size: 12px;
@@ -227,12 +252,17 @@
 	line-height: 28px;
 	color: #333333;
 }
-.password-msg{
-	width: 330px;
-	height: 28px;
+.username-tssize{
+	width: 30px;
+	height: 28px;	
+	float: left;
+	padding-left: 8px;
 	display: none;
-	font-size: 12px;
-	text-align: center;
-	line-height: 28px;
-	color: #333333;
+}
+.password-tssize{
+	width: 30px;
+	height: 28px;	
+	float: left;
+	padding-left: 8px;
+	display: none;
 }
