--- a/yougou/WebContent/css/regist.css
+++ b/yougou/WebContent/css/regist.css
@@ -48,11 +48,11 @@
 	width: 100%;
 	height: 20px;
 }
-.registfooter{
+.login-footer{
 	width: 100%;
 	height: 20px;
 }
-.registfooter>p{
+.login-footer>p{
 	line-height: 20px;
 	text-align: center;
 	font-size: 12px;
@@ -204,9 +204,6 @@
 	border-right: none;
 	float: left;
 }
-.checknumber-left>p{
-	margin: 0 0 0 0 ;
-}
 .checknumber-right{
 	width: 128px;
 	height: 36px;
@@ -217,9 +214,9 @@
 .checknumber-number{
 	width: 90px;
 	height: 36px;
-	border: solid 1px #122B40;
-	background: #1B6D85;
-	color: white;
+	border: solid 1px #D5D5D5;
+	background: #D5D5D5;
+	color: #222222;
 	float: right;
 	font-size: 16px;
 	margin-left: 10px;
@@ -394,4 +391,12 @@
 	text-align: center;
 	margin-right: 1px;
 }
-
+.checknumber-number>:hover{
+	cursor: pointer;
+}
+.checknumber-number{
+	text-decoration: underline line-through overline ;
+}
+.num{
+	font-family: "goudy stout";
+}
