--- a/yougou/WebContent/css/collect_delivered.css
+++ b/yougou/WebContent/css/collect_delivered.css
@@ -41,17 +41,21 @@
 	
 }
 .top-goodsinfo{
-	margin-left: 38px;
-	width: 350px;
+	/*margin-left: 38px;*/
+	width: 340px;
 	height: 34px;
 }
 .top-orderifo{
-	width: 220px;
+	width: 190px;
 	height: 34px;
 }
 .top-ordertime{	
-	width: 190px;
+	width: 140px;
 	height: 34px;
+}
+.top-orderconfirm{
+	width: 110px;
+	height: 34px
 }
 .body-middle{
 	width: 760px;
@@ -97,28 +101,40 @@
 	height: 80px;
 	float: right;
 }
-.goods-info,.haved-info,.order-info{
+.goods-info,.haved-info,.order-info,.order-confirm{
 	height: 80px;
 	float: left;
-
 }
 .goods-list p{
 	margin-bottom: 0px;
 }
 .goods-info{
-	width: 320px;
-	border-right: 1px solid #E3E3E3;
+	width: 250px;
 	margin-left: -20px;
+	border-right: 1px solid #E3E3E3;
 }
 .haved-info{
 	width: 210px;
-	border-right: 1px solid #E3E3E3;
 	text-align: center;
+	border-right: 1px solid #E3E3E3;
 }
 .order-info{	
-	width: 140px;
+	width: 120px;
 	text-align: center;
+	/*float: right;*/
+	border-right: 1px solid #E3E3E3;
+}
+.order-confirm{
+	width: 100px;
+	text-align: center;
+	/*line-height: 80px;*/
 	float: right;
+	margin-right: 5px;
+}
+.confirm-btn{
+	padding-top: 20px;
+	height: 30px;
+	
 }
 .addcart{
 	width: 86px;height: 24px;
