--- a/yougou/WebContent/css/findpassword-three.css
+++ b/yougou/WebContent/css/findpassword-three.css
@@ -1,3 +1,12 @@
+/*全局样式*/
+/*设置边距*/
+*{margin: 0; padding: 0;}
+/*li标签*/
+li{list-style: none;}
+/*a标签下划线*/
+a{text-decoration: none;}
+/*低版本IE*/
+img{border: none; vertical-align: bottom;}
 .header{
 	width: 100%;
 	height: 40px;
@@ -43,7 +52,93 @@
 .foot-top{
 	width: 855px;
 	height: 80px;
-	background: url(../img/forword1_01.png) no-repeat bottom;
+	background: url(../img/forword3_02.png) no-repeat bottom;
+}
+.foot-bootom{
+	width: 855px;
+	height: 370px;
+	margin: 0 67.5px;
+	padding: 32px 0px 100px;
+}
+.foot-bootom-next{
+	width: 855px;
+	height: 38px;
+	margin: 0 0 28px;
+}
+.bootom-next{
+	width: 116px;
+	height: 38px;
+	font-size: 14px;
+	line-height: 38px;
+	text-align: center;
+	background: #000000;
+	color: white;
+	margin-left: 100px;
+}
+.findpassword-footer{
+	width: 100%;
+	height: 264px;
+	padding: 0 200px 0 400px;
+	font-size: 12px;
+}
+.box1,.box2,.box3{
+	width: 285px;
+	height: 36px;
+	float: left;
+	text-align: center;
+	font-size: 14px;
+	line-height: 36px;
+	margin-top: 46px;
+}
+.box3{
+	color: white;
+}
+.user-ts-img{
+	float: left;
+	margin-left: 12px;
+	margin-top: 2px;
+}
+.user-ts{
+	float: left;
+	line-height: 35px;
+	margin-left: 6px;
+}
+.user-ts-img,.user-ts{
+	display: none;
+}
+.checknum-wz:hover{
+	cursor: pointer;
+	color: #D43F3A;
+}
+.bootom-next:hover{
+	cursor: pointer;
+}
+.con-top>input{
+	float: left;
+	margin-left: 20px;
+}
+.con-top>div{
+	width: 558px;
+	height: 30px;
+	line-height: 20px;
+	margin-left: 40px;
+}
+.con-top{
+	float: left;
+	font-size: 12px;
+}
+.con-bottom{
+	font-size: 12px;
+	margin-left: 40px;
+}
+.question{
+	width: 755px;
+	font-size: 12px;
+	border-bottom: solid 1px #D5D5D5;
+}
+.footer-que1>div{
+	margin-top: 20px;
+	width: 885px;
 }
 .foot-bootom{
 	width: 855px;
@@ -75,15 +170,12 @@
 	float: left;
 }
 .user-input{
-	width: 270px;
+	width: 100px;
 	height: 35px;
 	padding: 1px 5px;
-	font-size : 12px;
+	font-size : 13px;
+	line-height: 35px;
 	float: left;
-}
-.user-input>input{
-	width: 270px;
-	height: 35px;
 }
 .checknum{
 	width: 100px;
@@ -122,55 +214,12 @@
 	float: left;
 	margin-left: 20px;
 }
-.bootom-next{
-	width: 116px;
-	height: 38px;
-	font-size: 14px;
-	line-height: 38px;
-	text-align: center;
-	background: #000000;
-	color: white;
-	margin-left: 100px;
+.user-ts-btn>button{
+	width: 117px;
+	height: 26px;
+	margin-top: 8px;
 }
-.findpassword-footer{
-	width: 100%;
-	height: 20px;
-}
-.findpassword-footer>p{
-	line-height: 20px;
-	text-align: center;
-	font-size: 12px;
-	color: #666666;
-}
-.box1,.box2,.box3{
-	width: 285px;
-	height: 36px;
-	float: left;
-	text-align: center;
-	font-size: 14px;
-	line-height: 36px;
-	margin-top: 46px;
-}
-.box1{
-	color: white;
-}
-.user-ts-img{
-	float: left;
-	margin-left: 12px;
-	margin-top: 2px;
-}
-.user-ts{
-	float: left;
-	line-height: 35px;
-	margin-left: 6px;
-}
-.user-ts-img,.user-ts{
-	display: none;
-}
-.checknum-wz:hover{
-	cursor: pointer;
-	color: #D43F3A;
-}
-.bootom-next:hover{
-	cursor: pointer;
+.user-ts-btn>input{
+	width: 117px;
+	height: 26px;
 }
