--- a/yougou/WebContent/css/findpassword-two.css
+++ b/yougou/WebContent/css/findpassword-two.css
@@ -43,7 +43,7 @@
 .foot-top{
 	width: 855px;
 	height: 80px;
-	background: url(../img/forword1_01.png) no-repeat bottom;
+	background: url(../img/forword2_02.png) no-repeat bottom;
 }
 .foot-bootom{
 	width: 855px;
@@ -53,74 +53,20 @@
 }
 .foot-bootom-user{
 	width: 855px;
-	height: 35px;
+	height: 20px;
 	margin: 0 0 28px;
 }
-.foot-bootom-checknum{
-	width: 855px;
-	height: 40px;
+.foot-bootom-con{
+	width: 570px;
+	height: 92px;
 	margin: 0 0 28px;
+	border: solid 1px #D5D5D5;
+	padding-top: 13px;
 }
 .foot-bootom-next{
 	width: 855px;
 	height: 38px;
 	margin: 0 0 28px;
-}
-.user-zhanghao{
-	width: 90px;
-	height: 30.4px;
-	font-size: 14px;
-	line-height: 30.4px;
-	text-align: right;
-	float: left;
-}
-.user-input{
-	width: 270px;
-	height: 35px;
-	padding: 1px 5px;
-	font-size : 12px;
-	float: left;
-}
-.user-input>input{
-	width: 270px;
-	height: 35px;
-}
-.checknum{
-	width: 100px;
-	height: 30.4px;
-	font-size: 14px;
-	text-align: center;
-	line-height: 30px;
-	float: left;
-}
-.check-input>input{
-	width: 122px;
-	height: 35px;
-	padding: 1px 5px;
-}
-.check-input{
-	width: 122px;
-	height: 35px;
-	float: left;
-}
-.checknum-num{
-	width: 110px;
-	height: 35px;
-	background: #5D5D5D;
-	font-size: 20px;
-	line-height: 35px;
-	text-align: center;
-	margin-left: 20px;
-	float: left;
-}
-.checknum-wz{
-	width: 90px;
-	height: 30px;
-	font-size: 12px;
-	text-align: center;
-	line-height: 30px;
-	float: left;
-	margin-left: 20px;
 }
 .bootom-next{
 	width: 116px;
@@ -134,13 +80,9 @@
 }
 .findpassword-footer{
 	width: 100%;
-	height: 20px;
-}
-.findpassword-footer>p{
-	line-height: 20px;
-	text-align: center;
+	height: 264px;
+	padding: 0 200px 0 400px;
 	font-size: 12px;
-	color: #666666;
 }
 .box1,.box2,.box3{
 	width: 285px;
@@ -151,26 +93,36 @@
 	line-height: 36px;
 	margin-top: 46px;
 }
-.box1{
+.box2{
 	color: white;
-}
-.user-ts-img{
-	float: left;
-	margin-left: 12px;
-	margin-top: 2px;
-}
-.user-ts{
-	float: left;
-	line-height: 35px;
-	margin-left: 6px;
-}
-.user-ts-img,.user-ts{
-	display: none;
-}
-.checknum-wz:hover{
-	cursor: pointer;
-	color: #D43F3A;
 }
 .bootom-next:hover{
 	cursor: pointer;
+}
+.con-top>input{
+	float: left;
+	margin-left: 20px;
+}
+.con-top>div{
+	width: 558px;
+	height: 30px;
+	line-height: 20px;
+	margin-left: 40px;
+}
+.con-top{
+	float: left;
+	font-size: 12px;
+}
+.con-bottom{
+	font-size: 12px;
+	margin-left: 40px;
+}
+.question{
+	width: 755px;
+	font-size: 12px;
+	border-bottom: solid 1px #D5D5D5;
+}
+.footer-que1>div{
+	margin-top: 20px;
+	width: 885px;
 }
