--- a/yougou/WebContent/css/findpassword-first.css
+++ b/yougou/WebContent/css/findpassword-first.css
@@ -1,3 +1,4 @@
+img{border: none; vertical-align: bottom;}
 .header{
 	width: 100%;
 	height: 40px;
@@ -103,14 +104,8 @@
 	height: 35px;
 	float: left;
 }
-.checknum-num{
-	width: 110px;
-	height: 35px;
-	background: #5D5D5D;
-	font-size: 20px;
-	line-height: 35px;
-	text-align: center;
-	margin-left: 20px;
+.foot-bootom-checknum>canvas{
+	margin: 0 10px;
 	float: left;
 }
 .checknum-wz{
@@ -120,7 +115,6 @@
 	text-align: center;
 	line-height: 30px;
 	float: left;
-	margin-left: 20px;
 }
 .bootom-next{
 	width: 116px;
