洪军：页面的验证码修改

--- a/yougou/WebContent/css/findpassword-three.css
+++ b/yougou/WebContent/css/findpassword-three.css
@@ -1,12 +1,3 @@
-/*全局样式*/
-/*设置边距*/
-*{margin: 0; padding: 0;}
-/*li标签*/
-li{list-style: none;}
-/*a标签下划线*/
-a{text-decoration: none;}
-/*低版本IE*/
-img{border: none; vertical-align: bottom;}
 .header{
 	width: 100%;
 	height: 40px;
@@ -195,14 +186,8 @@ img{border: none; vertical-align: bottom;}
 	height: 35px;
 	float: left;
 }
-.checknum-num{
-	width: 110px;
-	height: 35px;
-	background: #5D5D5D;
-	font-size: 20px;
-	line-height: 35px;
-	text-align: center;
-	margin-left: 20px;
+.foot-bootom-checknum>canvas{
+	margin: 0 10px;
 	float: left;
 }
 .checknum-wz{
