--- a/yougou/WebContent/css/login-cart.css
+++ b/yougou/WebContent/css/login-cart.css
@@ -70,7 +70,7 @@ table{
   width:100%;
 }
 table td{
-  padding: 8px;
+  /* padding: 8px; */
   border-bottom: 1px solid gainsboro;
   font-size: 14px;
   text-align: center;
@@ -79,7 +79,7 @@ table td{
   width:300px;
 }
 #logincar{
-	margin-top: 0px;
+	/* margin-top: 0px; */
 	background: gainsboro;
 }
 
@@ -119,6 +119,11 @@ table td{
 	height: 210px;
 	margin: 10px 10px;
 }
+#goodsTImg{
+	width:50px;
+	height:50px;
+	margin-left:80px;
+}
 .shoes1 img{
 	margin-left: 30%;
 }
@@ -143,4 +148,15 @@ table td{
 	margin-top: -40px;
 	opacity: 0.6;
 }
-
+/* ·ÖÒ³ */
+.nav-page{
+	float: right;
+    font-size: 12PX;
+    color: #999;
+    height: 50px;
+    line-height: 50px;
+    margin: 6px 30px 0px 0px;
+}
+.nav-page span a{
+	color: #999;
+}
