--- a/yougou/WebContent/css/pro_center.css
+++ b/yougou/WebContent/css/pro_center.css
@@ -330,7 +330,7 @@ strong button{
 	margin-top:50%;
 	margin-left:-40%;
 	width:900px;
-	height:200px;
+	/* height:200px; */
 	background:white;
 	border:1px solid gainsboro;
 	/* position:fixed;
@@ -343,6 +343,49 @@ strong button{
 	font-size:12px;
 	color:grey;
 	margin-left:80px;
+}
+.CartTc{
+	width: 500px;
+	height: 400px;
+   /* border: 1px solid gainsboro;*/
+	position: absolute;
+	top: 80%;
+	left: 50%;
+	margin-left: -280px;
+	margin-top: -50px;
+	z-index: 100;
+	display: none;
+}
+.CartTc h3{
+	font-size: 14px;
+	background: black;
+	color: white;
+	margin-top: -5px;
+	/*color: #fff;*/
+	/*text-align: center;*/
+	position:relative ;
+	z-index: 100;
+	line-height: 30px;
+}
+#CartSize{
+	width:300px;
+	margin-left:30px;
+}
+.CartClose{
+	position: absolute;
+	right: 10px;
+	top: -5 px;
+	/*color: #fff;*/
+	font-size: 20px;
+	/*z-index:100;*/
+	cursor: pointer;
+	color: white;
+}
+.CartLine{
+	border: 1px solid gainsboro;
+	width: 500px;
+	height: 100px;
+	background: white;
 }
 /* .size1{
 	display:inline-block;
@@ -520,6 +563,9 @@ strong button{
 #look:hover{
 	cursor: pointer;
 }
+/* .currentScolor{
+	display:block;
+} */
 #look{
 	color: gray;
 	font-size: 12px;
