--- a/yougou/WebContent/css/backstage.css
+++ b/yougou/WebContent/css/backstage.css
@@ -103,3 +103,34 @@ hr{
 .main-right{
 	padding: 0px;
 }
+/*分页*/
+.type-page{
+	height: 110px;
+	padding: 40px 0px 30px 0px;
+}
+.pagination{
+	margin: 5px 10px 0px 0px;
+	float: right;
+}
+.pagination>a , .pagination>span{
+	height: 27px;
+	width: 27px;
+    line-height: 27px;
+    font-size: 14px;
+    color: #333;
+    padding: 0 6px;
+    min-width: 15px;
+    margin: 0 6px;
+    border-left: none;
+    text-align: center;
+    overflow: hidden;
+    float: left;
+    display: inline-block;
+}
+.pagination>.active{
+	background: #333;
+    color: #fff;
+}
+.pagination>.page-prev, .pagination>.page-next{
+	width:64px;
+}
