--- a/yougou/WebContent/css/backstage_goods.css
+++ b/yougou/WebContent/css/backstage_goods.css
@@ -71,11 +71,12 @@
 	border-top: 1px solid #efefef;
 }
 .tab-body ul li{
-	height: 40px;
+	height: 80px;
 	width: 155px;
 	float: left;
-	line-height: 40px;
+	line-height: 80px;
 	text-align: center;
+	border-top: 1px solid #efefef;
 }
 .tab-body ul .goods-name{
 	width: 280px;
